# news_auto_scrapper

./: .gitignore  README.md  Report_Result_20251201_235735.docx  TODO.md  main.py  pyproject.toml
src/: parser.py  scraper.py  writer.py
